--- a/app/modules/ut-api/usualtool.config
+++ b/app/modules/ut-api/usualtool.config
@@ -22,6 +22,6 @@ CREATE TABLE `cms_api_set` (
   PRIMARY KEY (`id`),
   UNIQUE KEY `id` (`id`)
 ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8;
-INSERT INTO `cms_api_set` VALUES (NULL,NULL,NULL,'cms_admin','username=[0] and password=[1]');]]></installsql>
+INSERT INTO `cms_api_set` VALUES (1,NULL,NULL,'cms_admin','username=[0] and password=[1]');]]></installsql>
 <uninstallsql><![CDATA[DROP TABLE `cms_api_set`;]]></uninstallsql>
 </mod>
